--- a/common.yaml
+++ b/common.yaml
@@ -11,6 +11,9 @@
       - libfuse2
       - python3-psutil
       - curl
+      - ca-certificates
+      - gnupg
+      - lsb-release
 
   - name: Configure SSH
     synchronize:
@@ -93,6 +96,32 @@
       creates: "{{ home }}/.nvm/nvm.sh"
     become: true
     become_user: "{{ username }}"
+
+  - name: Add Docker's GPG key
+    shell: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+    args:
+      creates: /etc/apt/keyrings/docker.gpg
+
+  - name: Set up Docker APT repository
+    shell: |
+      echo \
+      "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
+      $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+    args:
+      creates: /etc/apt/sources.list.d/docker.list
+    register: docker_apt_repository
+
+  - name: Update the APT package index for Docker
+    when: docker_apt_repository.changed
+    command: apt-get update
+
+  - name: Install Docker
+    apt:
+      pkg:
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+      - docker-compose-plugin
 
   - name: Create organizations' directories
     file:
