--- a/common.yaml
+++ b/common.yaml
@@ -29,6 +29,7 @@
     copy:
       src: configs/common/git/.gitconfig
       dest: "~/.gitconfig"
+      force: false
     become: true
     become_user: "{{ username }}"
 
@@ -154,6 +155,7 @@
       repo: "git@{{ item.0.base_repositories_path }}/{{ item.1 }}.git"
       dest: "~/{{ item.0.name }}/Repositories/{{ item.1 }}"
       accept_newhostkey: true
+      update: no
     become: true
     become_user: "{{ username }}"
     loop: "{{ organizations | subelements('repositories') }}"
@@ -171,7 +173,7 @@
     become: true
     become_user: "{{ username }}"
     loop: "{{ organizations_repositories_configurations.results }}"
-    when: "{{ item.stat.exists }}"
+    when: "item.stat.exists"
 
   - name: Install Spotify
     community.general.snap:
